# agents-never-sleep

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.public.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OVERVIEW.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SEMVER.md  SKILL.md  WATCHDOG.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: surface-parity.yml
acceptance/: conftest.py  run_acceptance.py  run_all.sh  test_agent_bridge.py  test_agent_clis.py  test_aider_launcher.py  test_ask_hook.py  test_auto_worktree.py  test_backup_ref_discoverability.py  test_budget.py  test_build_mechanisms.py  test_capabilities.py  test_classify_narrowing.py  test_classify_override_wiring.py  test_config.py  test_consensus_scope.py  test_council.py  test_driver_edges.py  test_enforce_hermes.py  test_enforce_platforms.py  test_enforcement.py  test_f5.py  test_f5_plan2_wiring.py  test_f5_wiring.py  test_fresh_session.py  test_gate_baseline_reuse.py  test_gate_check.py  test_hardening.py  test_install_hooks.py  test_keysource.py  test_launcher.py  test_live_tree_isolation.py  test_managed_env.py  test_onboarding.py  test_paperclip.py  test_parked.py  test_real_claude.py  test_reap.py  test_redact.py  test_redact_lint.py  (+15 more)
acceptance/sandbox/: app.py  mathutil.py  test_mathutil.py
acceptance/tickets/: ticket-01-trivial.md  ticket-02-ambiguous.md  ticket-03-redgate.md
agents_never_sleep/: __init__.py  agent_clis.py  aider_launcher.py  capabilities.py  config.py  consensus_scope.py  council.py  driver.py  enforce.py  enforcement.py  f5.py  gate_cache.py  gates.py  heartbeat.py  hermes_plugin.py  launcher.py  ledger.py  onboarding.py  orchestrator.py  parked.py  preflight.py  reap.py  redact.py  report.py  run.py  scratchpad.py  state.py  tickets.py  trust.py  vcs.py  watchdog.py
docs/: architecture.md  benchmarks.md  blast-radius.md  decision-model.md  deterministic-gates.md  discoverability-notes.md  execution-model.md  glossary.md  governance.md  launcher.md  manifesto.md  recovery.md  roadmap.md  scheduling.md  secrets.md  security.md  state-machine.md  tutorial-getting-started.md  watchdog.md
docs/outreach/: README.md  github-metadata.md  proposals.md  terminology-memo.md
docs/tutorials/: README.md  claude-code.md  other-platforms.md  unattended-scheduling.md  workflow-patterns.md
harness/: __init__.py  agent_clis.py  capabilities.py  config.py  council.py  decide.py  driver.py  enforce.py  enforcement.py  keysource.py  launcher.py  ledger.py  onboarding.py  orchestrator.py  preflight.py  redact.py  report.py  run.py  specialists.py  tickets.py  vcs.py  watchdog.py  worker.py
harness/sources/: paperclip.py
hooks/: README.md  deny_ask.sh  deny_irreversible.sh  enforce.sh  install.sh  settings-snippet.json  stop_guard.sh
references/: cross-platform-enforcement-design.md  v1.1-aider-hermes-adapter-analysis.md
scripts/: redact_lint.sh
scripts/hooks/: pre-commit
